# friendly

./: .gitignore  README.md  ae.bat  basic_text.out  pypi_upload.bat  pyproject.toml  requirements.txt  setup.cfg  upgrade_all.bat  upgrade_ft.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
friendly/: __init__.py  __main__.py  _ipython.py  configuration.py  console.py  idle_writer.py  ipython.py  ipython_configuration.py  ipython_excepthook.py  ipython_plain.py  jupyter.py  make_pot.bat  mu.py  my_gettext.py  py.typed  rich_console_helpers.py  rich_formatters.py  settings.py  utils.py
friendly/idle/: __init__.py  future_work.py  get_syntax.py  idle_formatter.py  main.py  patch_source_cache.py
friendly/ipython_common/: __init__.py  excepthook.py  settings.py
friendly/locales/: friendly.pot
friendly/locales/es/LC_MESSAGES/: friendly_es.mo  friendly_es.po
friendly/locales/fr/LC_MESSAGES/: friendly.mo  friendly.po  friendly_fr.mo  friendly_fr.po
friendly/locales/ru/LC_MESSAGES/: friendly_ru.mo  friendly_ru.po
friendly/mu/: __init__.py  repl.py  runner.py
friendly/theme/: __init__.py  amical.py  brunante.py  colours.py  friendly_pygments.py  friendly_rich.py  patch_tb_lexer.py
tests/: __init__.py  basic_text.out  test_simple.py
